--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@ Author URI:     https://github.com/mykedean
 Template:       nikkon
 Version:        0.1.0
 */
+
+.site-branding {
+    padding-top: 20px 0;
+}
